<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4322301902835072/9474612457</string>
    <string name="app_name">Polaris Jump</string>
    <string name="game_over">Game Over</string>
    <string name="pause">Paused</string>
    <string name="oyla">Rate This App</string>
    <string name="market">My Other Apps</string>
    <string name="mute">Mute</string>
    <string name="exit">Exit</string>
    <string name="rank">Rank</string>
    <string name="start">Start</string>
    <string name="bestscore">Best Score : </string>
    <string name="score">Score : </string>
    <string name="areyousure">Are you sure you want to exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="signError">SignIn Google account failed!</string>
</resources>